Initial clean SoundWave implementation

--- a/profile.html
+++ b/profile.html
@@ -576,7 +576,7 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <div class="sidebar-card">
-                <button class="btn btn-primary" id="editProfileBtn">✏️ Edit Profile</button>
+                <button class="btn btn-primary" id="editProfileBtn">Edit Profile</button>
                 <button class="btn btn-secondary" id="shareProfileBtn">Share</button>
             </div>
 
@@ -813,7 +813,6 @@ async function saveProfileToGitHub(profileData) {
     }
 }
 
-// ===== EDIT PROFILE =====
 
 function openEditModal() {
     const profileData = userProfile || loadProfileData();
