Initial clean SoundWave implementation

--- a/profile.html
+++ b/profile.html
@@ -648,12 +648,12 @@
             <div class="form-group">
                 <label>Avatar Image</label>
                 <div class="avatar-upload-wrapper">
-                    <div class="avatar-preview" id="avatarPreview">👤</div>
+                    <div class="avatar-preview" id="avatarPreview"></div>
                     <div style="flex: 1;">
                         <input type="file" id="avatarUpload" class="avatar-upload-input" accept="image/*">
                         <input type="hidden" id="avatarBase64" value="">
                         <button type="button" class="avatar-upload-btn" onclick="document.getElementById('avatarUpload').click()">
-                            📸 Upload Image
+                            Upload Image
                         </button>
                         <p style="font-size: 11px; color: var(--text-secondary); margin-top: 8px;">JPG, PNG (max 5MB)</p>
                     </div>
