Initial clean SoundWave implementation

--- a/profile.html
+++ b/profile.html
@@ -810,12 +810,12 @@
             <div class="profile-avatar" id="profileAvatar">S</div>
             <div class="profile-info">
                 <div class="profile-name">
-                    <span id="profileName">Syensan/学先生</span>
+                    <span id="profileName">user</span>
                     <div class="verified-badge" id="verifiedBadge" style="display: none;"></div>
                 </div>
-                <div class="profile-location" id="profileLocation">🇯🇵 Japan</div>
+                <div class="profile-location" id="profileLocation"></div>
                 <div class="profile-description" id="profileDescription">
-                    Music artist | 音楽を愛する | Independent producer
+                    user
                 </div>
             </div>
         </div>
