--- a/profile.html
+++ b/profile.html
@@ -853,7 +853,7 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <div class="sidebar-card">
-                <button class="btn btn-primary" id="editProfileBtn">✏️ Edit Profile</button>
+                <button class="btn btn-primary" id="editProfileBtn" Edit Profile</button>
                 <button class="btn btn-secondary" id="shareProfileBtn">Share</button>
             </div>
 
