--- a/profile.html
+++ b/profile.html
@@ -853,7 +853,7 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <div class="sidebar-card">
-                <button class="btn btn-primary" id="editProfileBtn" Edit Profile</button>
+                <button class="btn btn-primary" id="editProfileBtn"> Edit Profile</button>
                 <button class="btn btn-secondary" id="shareProfileBtn">Share</button>
             </div>
 
@@ -876,7 +876,7 @@
             <div class="form-group">
                 <label>Avatar Image</label>
                 <div class="avatar-upload-wrapper">
-                    <div class="avatar-preview" id="avatarPreview">👤</div>
+                    <div class="avatar-preview" id="avatarPreview"></div>
                     <div style="flex: 1;">
                         <input type="file" id="avatarUpload" class="avatar-upload-input" accept="image/*" onchange="handleAvatarUpload(event)">
                         <input type="hidden" id="avatarBase64" value="">
